Update 'f2ctzciph-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:a985f09834bab391730da605be125a4a27bc9c67@sha256:39767c1c85abb151332d266f0cc500ec8bc54d08e820c30e848d47cb4d3ac6ed

--- a/components/f2ctzciph-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/f2ctzciph-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: f2ctzciph-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:a985f09834bab391730da605be125a4a27bc9c67@sha256:39767c1c85abb151332d266f0cc500ec8bc54d08e820c30e848d47cb4d3ac6ed
+          name: container-image
